--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
   <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>
   <li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li>
   <li class="{% if page.url contains '/research/' %} active {% endif %}"><a href="{{ "/research/" | absolute_url }}">Research</a></li>
-  <li class="active"><a href="{{ "/cv/" | absolute_url }}">cv</a></li>
+  <li class="{% if page.url contains '/research/' %} active {% endif %}"><a href="{{ "/cv/" | absolute_url }}">CV</a></li>
 </ul>
 
 <ul class="icons">
