--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,25 +1,66 @@
----
-layout: compress
----
-<!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
-{% include header.html %}
+<!DOCTYPE HTML>
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+  Jekyll integration by somiibo.com
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+    {% include head.html %}
+	</head>
+	<body class="is-loading">
 
-<body>
-  <div class="wrapper">
-    {% include sidebar.html %}
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
 
-    <div class="main-wrapper">
-        {{ content }}
-    </div>
-  </div>
+				<!-- Header -->
+				<header id="header">
+					<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+				</header>
+
+				<!-- Nav -->
+					<nav id="nav">
+
+            {% include nav.html %}
+
+					</nav>
+
+				<!-- Main -->
+				<div id="main">
+
+					<!-- Post -->
+					<section class="post">
+					{% include header.html %}
+						<div class="wrapper">
+							{% include sidebar.html %}
+
+							<div class="main-wrapper">
+								{{ content }}
+							</div>
+						</div>
 
   {% include footer.html %}
 
 {% include scripts.html %}
-</body>
+					</section>
 
+					<!-- Footer -->
+						<footer>
+              <ul class="actions">
+								<li><a href="{{ "/blog/" | absolute_url }}" class="button">My Blog</a></li>
+              </ul>
+						</footer>
+					</div>
+
+				<!-- Footer -->
+        {% include foot.html %}
+
+			</div>
+
+			<!-- Scripts -->
+			{% include scripts-main.html %}
+			{% include tracking.html %}
+
+	</body>
 </html>
-
