--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ $background_image: '{{site.background_image}}';
 @import 'font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900');
 @import "skins/{{ site.theme_skin | default: 'blue' }}"; // skin
-@import "cv"; // main partials
+@import "default"; // main partials
 /*
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
